name changed for hamburguer-menu

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html>
   <head>
-    <title>off-canvas-menu demo</title>
+    <title>hamburguer-menu demo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="../off-canvas-menu.html">
+    <link rel="import" href="../hamburguer-menu.html">
   </head>
   <body>
-    <off-canvas-menu>
+    <hamburguer-menu>
       <menu-item text="link 1"></menu-item>
       <menu-item text="link 2"></menu-item>
       <menu-item text="link 3"></menu-item>
       <menu-item text="link 4"></menu-item>
-    </off-canvas-menu>
+    </hamburguer-menu>
   </body>
 </html>
